[package]
name = "isotope"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.25.0"
crossterm = "0.27.0"
rfd = "0.14.0"
tokio = { version = "1.36.0", features = ["full"] }
ndarray = "0.15.6"
statistical = "1.0.0"

[workspace.package]
version  = "0.0.0"
edition  = "2021"
license  = "MIT"
authors  = ["Dylan Stancil"]
repository = "https://github.com/Ihce/nuclide_isotope"
